src/docs/grammar.ebnf
# grammar.ebnf - Gramática da linguagem Cirius

expression     = logic_or ;
logic_or       = logic_and { "or" logic_and } ;
logic_and      = equality { "and" equality } ;
equality       = comparison { ("==" | "!=") comparison } ;
comparison     = addition { (">" | "<" | ">=" | "<=") addition } ;
addition       = term { ("+" | "-") term } ;
term           = factor { ("*" | "/" | "%") factor } ;
factor         = number | identifier | string | "(" expression ")" ;
